# cvehunter

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: DEVELOPMENT_CHECKLIST.md  PLAN.md
src/cvehunter/: __init__.py  artifacts.py  benchmark.py  cli.py  config.py  cost_tracker.py  graph_viz.py  kev_harness.py  llm_router.py  llm_status.py  logging_config.py  pipeline.py  schemas.py
src/cvehunter/agents/: __init__.py  builder.py  collector.py  exploiter.py  judge.py  researcher.py  researcher_swarm.py
src/cvehunter/api/: __init__.py  auth.py  database.py  errors.py  main.py  routes.py  run_service.py  task_registry.py
src/cvehunter/dashboard/: __init__.py  routes.py
src/cvehunter/dashboard/templates/: base.html  detail.html  index.html  llms.html  status.html
src/cvehunter/dashboard/templates/partials/: run_progress.html  run_row.html  runs_table.html
src/cvehunter/templates/compose/: standalone-web.yml  web-with-db.yml
src/cvehunter/templates/dockerfiles/: c-native.Dockerfile  java-spring.Dockerfile  node-express.Dockerfile  php-apache.Dockerfile  python-flask.Dockerfile
src/cvehunter/tools/: __init__.py  advisory.py  docker_ops.py  git_ops.py  github.py  nvd.py  osv.py  sandbox.py  url_validation.py
src/cvehunter/tools/sandbox_image/: Dockerfile
tests/: conftest.py  test_artifacts.py  test_builder.py  test_collector.py  test_docker_ops.py  test_exploiter.py  test_judge.py  test_llm_status.py  test_pipeline.py  test_researcher.py  test_run_service.py
tests/benchmarks/: known_cves.json
